--- a/ps1.qmd
+++ b/ps1.qmd
@@ -227,4 +227,35 @@ mean
 median
 ```
 
-On the table, the mean commute time is 10.81 minutes, while the median is lower, around 5–7 minutes, which means the mean is larger than the median. This indicates a right-skewed distribution, where a small number of very long commutes pull the average upward. On the histogram, the mean commute time is ~27 minutes, and the median is 20 minutes. Despite differences in values, the shape of the skew remains the same right skew because, in both cases, the median is smaller than the man. Most people clustered at short commute times, but there are obviously a few outliers that exceed 100 minutes in commute time. 
+On the table, the mean commute time is 10.81 minutes, while the median is lower, around 5–7 minutes, which means the mean is larger than the median. This indicates a right-skewed distribution, where a small number of very long commutes pull the average upward. On the histogram, the mean commute time is ~27 minutes, and the median is 20 minutes. Despite differences in values, the shape of the skew remains the same right skew because, in both cases, the median is smaller than the man. Most people clustered at short commute times, but there are obviously a few outliers that exceed 100 minutes in commute time.
+
+# 4.
+```{r}
+ggsave(
+  filename = "output/commute_histogram.png",
+  width = 7,
+  height = 5
+)
+```
+
+# 5. 
+Committing results should show on GitHub. 
+
+### 5. The Weight of Evidence
+1. 
+```{r}
+weighted_mean <- weighted.mean(
+  commuters$TRANTIME,
+  commuters$PERWT,
+  na.rm = TRUE
+)
+
+weighted_mean
+```
+# 2.
+The weighted and unweighted means are slightly different. The weighted mean is 27.19 minutes, whereas the unweighted is 27.21 minutes. The difference is 0.02 minutes. 
+
+# 3.
+The unweighted mean represents the average commute time among the individuals in the survey sample, while the weighted mean represents the estimated average commute time for the entire US population using survey weights. They might differ because some demographic groups can be overrepresented in the sample, and weights correct for that imbalance. In this case, the numbers are essentially identical, which suggests that the sample is already fairly representative of the population.
+```
+
